--- a/i18n/English.ini
+++ b/i18n/English.ini
@@ -1,4 +1,6 @@
 LABEL_SENDERS = "Senders"
+ACTION_MORE_SENDERS = "More"
+ACTION_LESS_SENDERS = "Less"
 LABEL_SETTINGS_TAB = "Sender list"
 HEADING_SETTINGS_TAB = "Sender list"
 LABEL_SENDERS_COUNT = "Senders count"
