--- a/i18n/English.ini
+++ b/i18n/English.ini
@@ -4,7 +4,7 @@ ACTION_LESS_SENDERS = "Less"
 LABEL_SETTINGS_TAB = "Sender list"
 HEADING_SETTINGS_TAB = "Sender list"
 LABEL_SENDERS_COUNT = "Senders count"
-LABEL_TIME_FRAME = "Gather senders for"
+LABEL_SEARCH_PERIOD = "Gather senders for"
 LABEL_TIME_RECENT = "recent"
 LABEL_TIME_LAST_YEAR = "last year"
 LABEL_TIME_ALL_TIME = "all time"
