#1467 - Add the "Rest mails" subfolder for the Senders folder

--- a/i18n/English.ini
+++ b/i18n/English.ini
@@ -12,3 +12,4 @@ LABEL_SEARCH_IN = "Gather senders in"
 LABEL_SEARCH_IN_ALL_FOLDERS = "all folders"
 LABEL_SEARCH_IN_INBOX = "Inbox"
 LABEL_SEARCH_IN_INBOX_AND_SUBFOLDERS = "Inbox and subfolders"
+LABEL_REST_MAILS = "Rest mails"
