Add "Sent" folder mode

--- a/i18n/English.ini
+++ b/i18n/English.ini
@@ -13,3 +13,4 @@ LABEL_SEARCH_IN_ALL_FOLDERS = "all folders"
 LABEL_SEARCH_IN_INBOX = "Inbox"
 LABEL_SEARCH_IN_INBOX_AND_SUBFOLDERS = "Inbox and subfolders"
 LABEL_REST_MAILS = "Rest mails"
+LABEL_SEARCH_IN_SENT = "Sent"
