--- a/i18n/English.ini
+++ b/i18n/English.ini
@@ -1,6 +1,6 @@
 LABEL_SENDERS = "Senders"
 LABEL_SENDERS_FROM = "Senders from %FOLDER%"
-LABEL_RECIPIENTS_FROM = "Main recipients from %FOLDER%"
+LABEL_RECIPIENTS_FROM = "Recipients from %FOLDER%"
 ACTION_MORE_SENDERS = "More"
 ACTION_LESS_SENDERS = "Less"
 LABEL_SETTINGS_TAB = "Sender list"
